# website-scrapper

./: .gitignore  README.md  pyproject.toml
data/: raw_data.csv  raw_data_links.json  results.json  results_unparseable.json
data/markdown/: 0154c3ea-32a1-4eac-a40d-cc394c506a97.md  0167d8f6-b000-4304-bbfe-5c981ac1aa55.md  01795032-f63f-421e-8387-ddbc5df246c4.md  02359dc4-8ff4-4084-a694-8a516904e100.md  027d87b6-6cff-4e78-ad8f-e51761a424e6.md  035de21d-4241-4bb2-933c-4d5b0fbaae7c.md  03944a6e-edf7-477e-883e-7c9753b2685e.md  03a71673-a30f-42cb-a3e3-936f08d156d0.md  03ca845f-5a67-4c43-98f5-e4e7220a1d86.md  04bcd169-ce6a-4836-9dca-51f817dc1d70.md  05b8c7dc-85bf-4262-a7f7-a8ef2434f666.md  05cb9a8a-cec4-4d84-961b-0d170560a0ea.md  06393c5f-3f0d-4365-827d-237c07f470ec.md  0647780e-3957-4813-b349-be510031a2c6.md  07612a02-2ebe-4d44-9045-db22b1077d8e.md  077739c9-0e0b-49b0-bad2-f7cc9fa3be20.md  077e48d9-daec-4a43-bec0-079d65d68207.md  07fb6de9-05d8-40ac-a633-704faef76ae7.md  081f3adf-0ed0-44b0-ad81-e6f3e1493bfd.md  092ca5f0-24d5-4b0f-807e-e33866237f3b.md  09307d95-07ad-408c-91fd-7d420cef9ddd.md  0b6686f8-c750-4aca-b4d8-a57a17e8b443.md  0c9aff40-7dd5-4ec9-8bb3-ee91ee4a9821.md  0cb5cd22-5154-46fa-89fd-a78e00239d5a.md  0d2f38ae-f68b-40c7-8b94-81af720d374e.md  0d6016af-6d5e-4ac6-a36f-d5d0c5595d80.md  0df93e0c-6ea7-40f0-8328-504f9dff789e.md  0e3ef72b-04a8-4c31-981d-8619fc096bd6.md  0ec46708-35f0-4119-9042-515b40eb08f1.md  0fe1bcfc-d524-4b92-a5b4-e82df3afcdfb.md  (+336 more)
scraper/: __init__.py  cli.py  crawler.py  models.py  output.py  parser.py
tests/: test_output.py  test_parser.py
