[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "website-scrapper"
version = "0.1.0"
description = "A polite, configurable website scraper"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
website-scrapper = "scraper.cli:main"

[tool.setuptools.packages.find]
include = ["scraper*"]
